# ChangeLog for dev-libs/libnfc
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/libnfc/ChangeLog,v 1.8 2011/04/29 21:28:13 ikelos Exp $

*libnfc-1.5.0 (29 Apr 2011)

  29 Apr 2011; Mike Auty <ikelos@gentoo.org> +libnfc-1.5.0.ebuild:
  Version bump libnfc to 1.5.0.

  20 Mar 2011; Samuli Suominen <ssuominen@gentoo.org> libnfc-1.3.1.ebuild,
  libnfc-1.3.2.ebuild, libnfc-1.3.3.ebuild, libnfc-1.3.4.ebuild,
  libnfc-1.4.2.ebuild:
  Fix libusb depend to correct SLOT.

*libnfc-1.4.2 (23 Feb 2011)

  23 Feb 2011; Mike Auty <ikelos@gentoo.org> +libnfc-1.4.2.ebuild:
  Version bump to 1.4.2 which has a different API and now uses proper sonaming.

*libnfc-1.3.4 (06 Apr 2010)

  06 Apr 2010; Mike Auty <ikelos@gentoo.org> +libnfc-1.3.4.ebuild:
  Version bump.

*libnfc-1.3.3 (17 Feb 2010)

  17 Feb 2010; Mike Auty <ikelos@gentoo.org> +libnfc-1.3.3.ebuild:
  Version bump libnfc to 1.3.3.

*libnfc-1.3.2 (01 Feb 2010)

  01 Feb 2010; Mike Auty <ikelos@gentoo.org> +libnfc-1.3.2.ebuild:
  Version bump libnfc to 1.3.2.

*libnfc-1.3.1 (23 Jan 2010)

  23 Jan 2010; Mike Auty <ikelos@gentoo.org> +libnfc-1.3.1.ebuild:
  Version bump libnfc.

*libnfc-1.2.1 (16 Aug 2009)

  16 Aug 2009; Mike Auty <ikelos@gentoo.org> +libnfc-1.2.1.ebuild,
  +metadata.xml:
  Initial commit of a library for manipulating PN53x NFC chips.
