@@ -1,28 +1,22 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA256
+Hash: SHA1
 
 DIST libnfc-1.2.1.tar.gz 306121 RMD160 4a77224bad0a0fcdb4e5dc27bcd111aef47d42c6 SHA1 2e0c4798d47c0bed3ef52bb0bce31b44210b2266 SHA256 392f0ddbe24f1c12be61a2c06eb6348f054dc4372694941d563af0eeb781d3ed
-DIST libnfc-1.3.1.tar.gz 432469 RMD160 33debd79d9fb45a133674c2810921eef6d2060d3 SHA1 df9c1985c6b92d1c49b1e7a042d05f85de55dbfd SHA256 2dedefc61f20ed4c7467f9289c3aa3b9fafcd5f5c84e997947e978cd1425560c
-DIST libnfc-1.3.2.tar.gz 443162 RMD160 926ad9536d0665fc72420505f1678dc4211aa851 SHA1 1ea4c58fa10fab061eb217f61cec066fb3b2979a SHA256 2243f893b7327a908772647df7640349d767e95be161459722633d259f583769
-DIST libnfc-1.3.3.tar.gz 407042 RMD160 c756ca028a6aaaf97d337b39d6b77dd16ee38a2d SHA1 ae0bd156550896dcac93e968314d7efce6c7fce8 SHA256 dc30a274b9a35a88aa7189236c81c05125e797ccf882e0a2ed6eae4c5e31c738
 DIST libnfc-1.3.4.tar.gz 408328 RMD160 b462b523efa189e0a0097c3842cfea0e4f9f9e38 SHA1 dbeb879ded4ef5de7e04877f3385ea6d91d8db0b SHA256 143266d8a542eedca6f24b7c6d9355e00d541c3914cf941c1be9d5212c764b86
 DIST libnfc-1.4.2.tar.gz 487310 RMD160 9fc08d78951d63c4bd667c8e1b9f7831b9425db2 SHA1 4bc578169716a04156c6839e46f86d2663602f07 SHA256 295ad8a0dc0e4469d9f10589449a9a04eed284a2e7faf398e91d84a89ca91bfa
 DIST libnfc-1.5.0.tar.gz 502506 RMD160 89afc8dca92044548316491937a88a3106551c13 SHA1 5ec36d77689dcc72def1388dd39cb8f91cccab5f SHA256 fae2910645ac71a0b7707d693d1521f210019fdf3437203b3d779951ddcb7e85
+DIST libnfc-1.5.1.tar.gz 534349 RMD160 2bc3cb8bc40663020507da7c53a88bed87f122d3 SHA1 aebd4a126f2268d06ade445cd6cf2b3c59256f51 SHA256 5c0f33465051704a67c63f6ca9782d69b0d7ac4962ea5f996829834d1327f4f7
 EBUILD libnfc-1.2.1.ebuild 574 RMD160 1cf2b1e5db73a9dac301985f10d40bfcdb742b2d SHA1 869aacb20920189a165b2441c5508dbe042afb7a SHA256 6224e3e5c46c1d7a3bf846e120bbec64289390fe925ff7f35bc925f61bed794a
-EBUILD libnfc-1.3.1.ebuild 764 RMD160 6c41f13ce08dadd38b2cfdce91c7c363b805308b SHA1 d735e7fae41cb359587b94341a8a01080ecccf58 SHA256 584be730fcfae05fbb0afe3cfa1800c019311ed5c37720a06a6a0f3f730056bb
-EBUILD libnfc-1.3.2.ebuild 764 RMD160 282aa3bf4410a5edfd2bdf17dc53a2e8f1e16de9 SHA1 f8c6339097f257c410de294aa52163d2fb42eaf8 SHA256 d759095de28b903c15a97f7d025b7bd5dde921e6b072471c22b0478218331ef0
-EBUILD libnfc-1.3.3.ebuild 764 RMD160 101dd524df189569e7979b7ccc61c83c6ea98dde SHA1 920e8c0edd1e72a2ea37b8f94f59eb99a180c1cb SHA256 70a89ba26ca8fe1b0c5e76f5c78f9c2f204475224b10823e342f7bfae34981ef
 EBUILD libnfc-1.3.4.ebuild 764 RMD160 6158b81cfdbe84cff8c56fc90c7ccf6eb349f660 SHA1 4d532ae00f8fe505a0b67335b65ec952cbe639ae SHA256 17fa7e7c4694db75ff70dd69fcdff1b0e9953f60c71ccdd0123d1bef2fc2e9ea
 EBUILD libnfc-1.4.2.ebuild 743 RMD160 17c1e186874e82d0b823c0b4dc24e9d0ccd96c8b SHA1 19eb9b873e7d06def52c2706d9df1cb23d70ab61 SHA256 339d172c54cf62197f8d8c63c414f60c085ef6192caf74df02f0e807da89f137
 EBUILD libnfc-1.5.0.ebuild 740 RMD160 c36da50cf9253770a00ffcdb3c458f45399fcdcb SHA1 04b390153badc64bcd818f08ec68cdf4f201b94e SHA256 9a6216e0320313fa7dfbf2e62e870d5c1ed26ca0f99e1f5c277799b11df2e1ce
-MISC ChangeLog 1379 RMD160 c6c1cad8366d2e9363fe08c01f63f3d38e793989 SHA1 b046b7fb8a0cad4450b742a43ba8a20eaa925ff8 SHA256 8a768dad829e839d0b2278f1c466cf1fd82d104fbbc42023229afa412bee81b2
+EBUILD libnfc-1.5.1.ebuild 740 RMD160 cb05103accb9ce39b213157bc2cdc68c4fee7680 SHA1 e75b2d285c524a0a283485d8d950dcb0433cd996 SHA256 574940935e39e1b5c8bde6cff021cbed599085d951887575bdff00bbbbfb04b3
+MISC ChangeLog 1592 RMD160 1c9ef48a52cc84bd71eee02703b4daa82af1f069 SHA1 2e9222b9128b89ac9deb1ac0a2ec298174eec8ed SHA256 d997d6fe21c9d3de4bcd04e40e506e39f05d3202d83c3981bd484fc63e02998b
 MISC metadata.xml 228 RMD160 0c0f21c7ab70c383b7f97394d12228c73acc1761 SHA1 7244819ba1a8f6f55dd5e4ef9b699077b6149a54 SHA256 5bc9b0863b4032c32c2ee0612a08038a2f595c989254291ac8231bed7aecd8e1
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iJwEAQEIAAYFAk59C6AACgkQfXuS5UK5QB2kFgQAi9fddoPT0qfJdDNGVjJMPbIE
-dlCW1SAJMmYG9C8vAqRSQhuhus/mOLYViiPwYiM1UFGMZgDoJPUI36eL5fQryjLf
-kNHg+vFJs+Ml8ZCSO+OUHbwFZW/08xdMly/mN5na1l1ZkCwLoE1747XgKkYDDtoi
-nz9pb0kjsZaaal6KMCs=
-=ZAYg
+iEYEARECAAYFAk6cnlcACgkQu7rWomwgFXpT8wCgsr1j3PLcV1o+T5hXUvRbixoT
+oyIAnixkpGtUlPdYlXgJpGlNs7TMaY3O
+=6ac7
 -----END PGP SIGNATURE-----
