@@ -1,8 +1,8 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/libnfc/Attic/libnfc-1.3.3.ebuild,v 1.2 2011/03/20 18:11:44 ssuominen Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/libnfc/libnfc-1.5.1.ebuild,v 1.1 2011/10/17 21:29:54 ikelos Exp $
 
-EAPI="2"
+EAPI="4"
 
 inherit eutils
 
@@ -15,11 +15,10 @@ SLOT="0"
 KEYWORDS="~x86 ~amd64"
 IUSE="doc"
 
-CDEPEND="sys-apps/pcsc-lite
+RDEPEND="sys-apps/pcsc-lite
 	virtual/libusb:0"
-DEPEND="${CDEPEND}
+DEPEND="${RDEPEND}
 	doc? ( app-doc/doxygen )"
-RDEPEND="${CDEPEND}"
 
 src_compile() {
 	emake || die "Failed to compile."
