@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/libnfc
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/libnfc/ChangeLog,v 1.8 2011/04/29 21:28:13 ikelos Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/libnfc/ChangeLog,v 1.9 2011/10/17 21:29:54 ikelos Exp $
+
+*libnfc-1.5.1 (17 Oct 2011)
+
+  17 Oct 2011; Mike Auty <ikelos@gentoo.org> -libnfc-1.3.1.ebuild,
+  -libnfc-1.3.2.ebuild, -libnfc-1.3.3.ebuild, +libnfc-1.5.1.ebuild:
+  Remove some old versions and bump the latest.
 
 *libnfc-1.5.0 (29 Apr 2011)
 
